# team-task-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/admin/: auth.py  views.py
app/api/: deps.py
app/api/v1/: auth.py  calendar_routes.py  comment_routes.py  evaluation_routes.py  health.py  meeting_routes.py  router.py  task_routes.py  team_routes.py  user_routes.py  users.py
app/core/: config.py  security.py
app/crud/: calendar.py  comments.py  evaluations.py  meetings.py  tasks.py  teams.py  users.py
app/db/: session.py
app/models/: __init__.py  comments.py  evaluations.py  meetings.py  tasks.py  teams.py  users.py
app/schemas/: calendar.py  comments.py  evaluations.py  meetings.py  tasks.py  teams.py  users.py
app/services/: calendar.py  comments.py  evaluations.py  meetings.py  tasks.py  teams.py  users.py
frontend/: README.md  index.html
frontend/src/: App.css  App.tsx  api.ts  index.css
migrations/: env.py
migrations/versions/: 0244d411f4fa_create_meetings_table.py  1863bb16e5f7_create_users_table.py  36f2c07d2d92_create_tasks_table.py  531bb36c12aa_create_teams_table_and_add_user_team.py  67956badf3c1_create_evaluations_table.py  6ff423e55f82_add_team_id_to_tasks.py  c6e02c1c477b_add_superuser.py  dbaeb57310c7_create_comments_table.py
tests/: conftest.py  test_health.py
tests/api/: test_auth.py  test_calendar_routes.py  test_comment_routes.py  test_evaluation_routes.py  test_health.py  test_meeting_routes.py  test_task_routes.py  test_team_routes.py  test_user_routes.py
tests/integration/crud/: test_calendar_crud.py  test_comment_crud.py  (+5 more)
tests/unit/: test_database_url.py  test_password.py  test_user_model.py  test_user_service.py
(+16 files in other folders)
