[project]
name = "team-task-manager"
version = "0.1.0"
description = "FastAPI backend for team task management with roles, comments, meetings, evaluations, and admin panel"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "email-validator>=2.0.0",
    "pwdlib[argon2]>=0.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sqladmin>=0.20.0",
    "wtforms<3.2",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx2>=0.1.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
